# BugHawk

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: README.md
Backend/: main.py  matrix.py  pyproject.toml  requirements.txt
Backend/database/: database_manager.py
Backend/dataset/: ai_engine_generate_confusion_matrix.py  analyze_data.py  clean_dataset.py  comp_dataset.py  threat_debug_dataset.csv
Backend/message_template/: message.py
Backend/models/: intent_classifier.py  main_model.py  model_cache.py
Backend/prompt/: cyber_maintance.py  debugger_system_prompt.py
Backend/utils/: preprocessImage.py
Frontend/: analyzer.py  app.py  requirements.txt
Frontend/ai/: __init__.py  base.py  demo.py  explainer.py  templates.py
Frontend/scanner/: __init__.py  bandit_scanner.py  base.py  job.py  manager.py  pip_audit_scanner.py  radon_scanner.py  report.py  ruff_scanner.py  scoring.py
Frontend/templates/: about.html  contact.html  dashboard.html  index.html  login.html  main.html  profile.html  report_demo.html  reports.html  settings.html  signup.html  users.html  verify_otp.html
docs/: ARCHITECTURE.md  DECISIONS.md  ROADMAP.md
scripts/: README.md
