[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bitsandbytes>=0.48.2",
    "fastapi>=0.121.0",
    "huggingface-hub[hf-xet]>=0.36.0",
    "pillow>=12.0.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "trl>=0.24.0",
    "uvicorn>=0.38.0",
]
